objects/Case.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>PCD Cosmeto Process</fullName>
        <description>PCD Cosmeto Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>AWAITING CUSTOMER</fullName>
        </values>
        <values>
            <fullName>CLOSED</fullName>
        </values>
        <values>
            <fullName>CUSTOMER SERVICE RESOLUTION</fullName>
        </values>
        <values>
            <fullName>IN PROGRESS COSMETOVIGILANCE</fullName>
        </values>
        <values>
            <fullName>IN PROGRESS QUALITY</fullName>
        </values>
        <values>
            <fullName>NEW</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>OPEN</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PCD Quality Process</fullName>
        <description>PCD Quality Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>AWAITING CUSTOMER</fullName>
        </values>
        <values>
            <fullName>CLOSED</fullName>
        </values>
        <values>
            <fullName>CUSTOMER SERVICE RESOLUTION</fullName>
        </values>
        <values>
            <fullName>IN PROGRESS QUALITY</fullName>
        </values>
        <values>
            <fullName>NEW</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>OPEN</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PCD Ecommerce Process</fullName>
        <description>PCD Ecommerce Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>AWAITING CUSTOMER</fullName>
        </values>
        <values>
            <fullName>AWAITING PCD</fullName>
        </values>
        <values>
            <fullName>AWAITING THIRD PARTY</fullName>
        </values>
        <values>
            <fullName>CLOSED</fullName>
        </values>
        <values>
            <fullName>NEW</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>OPEN</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PCD Generic%2FCRM%2FGDPR Process</fullName>
        <description>PCD Generic/CRM/GDPR Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>AWAITING CUSTOMER</fullName>
        </values>
        <values>
            <fullName>AWAITING PCD</fullName>
        </values>
        <values>
            <fullName>CLOSED</fullName>
        </values>
        <values>
            <fullName>NEW</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>OPEN</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>FCR__c</fullName>
        <formula>AND(
      (OutboundCall__c +  OutgoingEmail__c +  OutgoingLetter__c +  NbAlcmeonConversation__c +  NbConversation__c) &lt;= 1,
        ISPICKVAL(Status, &quot;Closed&quot;) ,
          ISPICKVAL( Case_resolution__c , &quot;Case resolved&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axis__c</fullName>
        <label>Axis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fragrance</fullName>
                </value>
                <value>
                    <fullName>Make up</fullName>
                </value>
                <value>
                    <fullName>Skincare</fullName>
                </value>
                <value>
                    <fullName>Misceallenous</fullName>
                    <label>Miscellaneous</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>MCD</fullName>
                    <isActive>false</isActive>
                    <label>MCD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm SPAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <label>NEW</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <label>OPEN</label>
                </value>
                <value>
                    <fullName>Awaiting consumer</fullName>
                    <label>AWAITING CUSTOMER</label>
                </value>
                <value>
                    <fullName>AWAITING PCD</fullName>
                </value>
                <value>
                    <fullName>SENT TO AXPHARMA FOR INVESTIGATION</fullName>
                </value>
                <value>
                    <fullName>AWAITING 3RD PARTY</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS QUALITY</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER SERVICE RESOLUTION</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <label>CLOSED</label>
                </value>
                <value>
                    <fullName>Awaiting PCD Eco</fullName>
                    <isActive>false</isActive>
                    <label>Awaiting PCD Eco</label>
                </value>
                <value>
                    <fullName>Consumer contacted</fullName>
                    <isActive>false</isActive>
                    <label>Consumer contacted</label>
                </value>
                <value>
                    <fullName>Form fulfilled</fullName>
                    <isActive>false</isActive>
                    <label>Form fulfilled</label>
                </value>
                <value>
                    <fullName>Medical care</fullName>
                    <isActive>false</isActive>
                    <label>Medical care</label>
                </value>
                <value>
                    <fullName>Waiting PCD HQ</fullName>
                    <isActive>false</isActive>
                    <label>Waiting PCD HQ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASM_ID__c</fullName>
        <externalId>true</externalId>
        <label>ASM_ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT_ECO__c</fullName>
        <formula>RecordType.Name = &quot;Ecommerce&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RT ECO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <label>Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advice</fullName>
                </value>
                <value>
                    <fullName>Anomalies in store (sales error / other feedback)</fullName>
                    <label>Anomalies in store (sales error / other feedback...)</label>
                </value>
                <value>
                    <fullName>Anomalies in store (sales error…)</fullName>
                    <isActive>false</isActive>
                    <label>Anomalies in store (sales error…)</label>
                </value>
                <value>
                    <fullName>Après la commande</fullName>
                    <isActive>false</isActive>
                    <label>Après la commande</label>
                </value>
                <value>
                    <fullName>Availability In Store</fullName>
                </value>
                <value>
                    <fullName>Avant le passage de commande</fullName>
                    <isActive>false</isActive>
                    <label>Avant la commande</label>
                </value>
                <value>
                    <fullName>Back-Office</fullName>
                    <isActive>false</isActive>
                    <label>Back-Office</label>
                </value>
                <value>
                    <fullName>Booking / consultations</fullName>
                </value>
                <value>
                    <fullName>Brand information</fullName>
                </value>
                <value>
                    <fullName>Brand policy</fullName>
                </value>
                <value>
                    <fullName>Bulk Non compliant</fullName>
                </value>
                <value>
                    <fullName>Call &amp; Delivery</fullName>
                </value>
                <value>
                    <fullName>CCPA_Privacy law</fullName>
                    <isActive>false</isActive>
                    <label>CCPA_Privacy law</label>
                </value>
                <value>
                    <fullName>Click &amp; Collect (in store)</fullName>
                </value>
                <value>
                    <fullName>Clienteling</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                    <isActive>false</isActive>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>Cosmetic Vigilance</fullName>
                </value>
                <value>
                    <fullName>CRM Communications</fullName>
                </value>
                <value>
                    <fullName>Delivery Information</fullName>
                </value>
                <value>
                    <fullName>Demandes d&apos;information</fullName>
                    <isActive>false</isActive>
                    <label>Demandes d&apos;information</label>
                </value>
                <value>
                    <fullName>Dior Couture inquiries</fullName>
                </value>
                <value>
                    <fullName>Documentation &amp; modèles d&apos;essai</fullName>
                    <isActive>false</isActive>
                    <label>Documentation &amp; modèles d&apos;essai</label>
                </value>
                <value>
                    <fullName>E-boutique Policy</fullName>
                    <isActive>false</isActive>
                    <label>E-boutique Policy</label>
                </value>
                <value>
                    <fullName>Engraving service (in store)</fullName>
                </value>
                <value>
                    <fullName>Engraving service (online)</fullName>
                </value>
                <value>
                    <fullName>E-services &amp; catalog</fullName>
                </value>
                <value>
                    <fullName>Félicitations - Remerciements</fullName>
                    <isActive>false</isActive>
                    <label>Félicitations - Remerciements</label>
                </value>
                <value>
                    <fullName>Geste commercial</fullName>
                    <isActive>false</isActive>
                    <label>Geste commercial</label>
                </value>
                <value>
                    <fullName>Gifting policy at multibrands stores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_3__c</fullName>
        <label>Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>10 Autre produit fonctionnel</fullName>
                    <isActive>false</isActive>
                    <label>10 Autre produit fonctionnel</label>
                </value>
                <value>
                    <fullName>10 Sale</fullName>
                    <isActive>false</isActive>
                    <label>10 Sale</label>
                </value>
                <value>
                    <fullName>11 Accessoire/applicateur sale</fullName>
                    <isActive>false</isActive>
                    <label>11 Accessoire/applicateur sale</label>
                </value>
                <value>
                    <fullName>11 Autres</fullName>
                    <isActive>false</isActive>
                    <label>11 Autres</label>
                </value>
                <value>
                    <fullName>12 Accessoire/applicateur sale</fullName>
                    <isActive>false</isActive>
                    <label>12 Accessoire/applicateur sale</label>
                </value>
                <value>
                    <fullName>12 BPL abimée</fullName>
                    <isActive>false</isActive>
                    <label>12 BPL abimée</label>
                </value>
                <value>
                    <fullName>13 BPL abimée</fullName>
                    <isActive>false</isActive>
                    <label>13 BPL abimée</label>
                </value>
                <value>
                    <fullName>13 BPL sale</fullName>
                    <isActive>false</isActive>
                    <label>13 BPL sale</label>
                </value>
                <value>
                    <fullName>14 BPL sale</fullName>
                    <isActive>false</isActive>
                    <label>14 BPL sale</label>
                </value>
                <value>
                    <fullName>14 Cello abimée</fullName>
                    <isActive>false</isActive>
                    <label>14 Cello abimée</label>
                </value>
                <value>
                    <fullName>15 Cello abimée</fullName>
                    <isActive>false</isActive>
                    <label>15 Cello abimée</label>
                </value>
                <value>
                    <fullName>15 Cello mal collée</fullName>
                    <isActive>false</isActive>
                    <label>15 Cello mal collée</label>
                </value>
                <value>
                    <fullName>16 Cello mal collée</fullName>
                    <isActive>false</isActive>
                    <label>16 Cello mal collée</label>
                </value>
                <value>
                    <fullName>16 Cello sale</fullName>
                    <isActive>false</isActive>
                    <label>16 Cello sale</label>
                </value>
                <value>
                    <fullName>17 Cello sale</fullName>
                    <isActive>false</isActive>
                    <label>17 Cello sale</label>
                </value>
                <value>
                    <fullName>17 Etiquette abimée/décollée/ne tient pas</fullName>
                    <isActive>false</isActive>
                    <label>17 Etiquette abimée/décollée/ne tient pas</label>
                </value>
                <value>
                    <fullName>18 Etquiette abimée/décollée/ne tient pas</fullName>
                    <isActive>false</isActive>
                    <label>18 Etquiette abimée/décollée/ne tient pas</label>
                </value>
                <value>
                    <fullName>18 Miroir abimé/rayé</fullName>
                    <isActive>false</isActive>
                    <label>18 Miroir abimé/rayé</label>
                </value>
                <value>
                    <fullName>19 Miroir abimé/rayé</fullName>
                    <isActive>false</isActive>
                    <label>19 Miroir abimé/rayé</label>
                </value>
                <value>
                    <fullName>19 Miroir sale</fullName>
                    <isActive>false</isActive>
                    <label>19 Miroir sale</label>
                </value>
                <value>
                    <fullName>1 Aspect/Texture</fullName>
                    <isActive>false</isActive>
                    <label>1 Aspect/Texture</label>
                </value>
                <value>
                    <fullName>20 Miroir sale</fullName>
                    <isActive>false</isActive>
                    <label>20 Miroir sale</label>
                </value>
                <value>
                    <fullName>20 Pack primaire abimé/rayé/défaut esthétique</fullName>
                    <isActive>false</isActive>
                    <label>20 Pack primaire abimé/rayé/défaut esthétique</label>
                </value>
                <value>
                    <fullName>21 Pack primaire avec défaut esthétique</fullName>
                    <isActive>false</isActive>
                    <label>21 Pack primaire avec défaut esthétique</label>
                </value>
                <value>
                    <fullName>21 Pack primaire sale</fullName>
                    <isActive>false</isActive>
                    <label>21 Pack primaire sale</label>
                </value>
                <value>
                    <fullName>21 Poudre cassée/endommagée</fullName>
                    <isActive>false</isActive>
                    <label>21 Poudre cassée/endommagée</label>
                </value>
                <value>
                    <fullName>22 Autre Pack esthétique</fullName>
                    <isActive>false</isActive>
                    <label>22 Autre Pack esthétique</label>
                </value>
                <value>
                    <fullName>22 Pack primaire abimé/rayé</fullName>
                    <isActive>false</isActive>
                    <label>22 Pack primaire abimé/rayé</label>
                </value>
                <value>
                    <fullName>22 Raisin RAL cassé/endommagé</fullName>
                    <isActive>false</isActive>
                    <label>22 Raisin RAL cassé/endommagé</label>
                </value>
                <value>
                    <fullName>22 Sérigraphie abimée</fullName>
                    <isActive>false</isActive>
                    <label>22 Sérigraphie abimée</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_4__c</fullName>
        <label>Type 4</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_3__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anomalies on my account (bugs, order history Unavailable)</fullName>
                </value>
                <value>
                    <fullName>Broken, damaged applicator or accessory</fullName>
                    <isActive>false</isActive>
                    <label>Broken, damaged applicator or accessory</label>
                </value>
                <value>
                    <fullName>Broken, damaged applicator or accessory - Body brush issue</fullName>
                    <isActive>false</isActive>
                    <label>Broken, damaged applicator or accessory - Body brush issue</label>
                </value>
                <value>
                    <fullName>Broken, damaged applicator or accessory - Broken brush hair</fullName>
                    <isActive>false</isActive>
                    <label>Broken, damaged applicator or accessory - Broken brush hair</label>
                </value>
                <value>
                    <fullName>Broken, damaged applicator or accessory - Other</fullName>
                    <isActive>false</isActive>
                    <label>Broken, damaged applicator or accessory - Other</label>
                </value>
                <value>
                    <fullName>Broken Compact powder</fullName>
                </value>
                <value>
                    <fullName>Broken-Damaged Applicator or Accessory</fullName>
                </value>
                <value>
                    <fullName>Broken-Damaged Mechanism/Pump</fullName>
                </value>
                <value>
                    <fullName>Broken damaged mechanism pump</fullName>
                    <isActive>false</isActive>
                    <label>Broken damaged mechanism pump</label>
                </value>
                <value>
                    <fullName>Broken damaged mechanism pump - Mechanism not functionning</fullName>
                    <isActive>false</isActive>
                    <label>Broken damaged mechanism pump - Mechanism not functionning</label>
                </value>
                <value>
                    <fullName>Broken damaged mechanism pump - Pump detached</fullName>
                    <isActive>false</isActive>
                    <label>Broken damaged mechanism pump - Pump detached</label>
                </value>
                <value>
                    <fullName>Broken damaged mechanism pump - Pump not functionning</fullName>
                    <isActive>false</isActive>
                    <label>Broken damaged mechanism pump - Pump not functionning</label>
                </value>
                <value>
                    <fullName>Broken damaged mechanism pump - Purse spray</fullName>
                    <isActive>false</isActive>
                    <label>Broken damaged mechanism pump - Purse spray</label>
                </value>
                <value>
                    <fullName>Broken Lipstick Baton</fullName>
                </value>
                <value>
                    <fullName>Broken Lipstick Baton - Detached baton</fullName>
                    <isActive>false</isActive>
                    <label>Broken Lipstick Baton - Detached baton</label>
                </value>
                <value>
                    <fullName>Broken Pencil lead</fullName>
                </value>
                <value>
                    <fullName>Broken Primary pack (case/bottle/cap/container…)</fullName>
                </value>
                <value>
                    <fullName>Cap does not hold</fullName>
                </value>
                <value>
                    <fullName>Coffret / Pouch damaged</fullName>
                    <isActive>false</isActive>
                    <label>Coffret / Pouch damaged</label>
                </value>
                <value>
                    <fullName>Color Non Compliant - Bulk</fullName>
                </value>
                <value>
                    <fullName>Damaged at counter</fullName>
                    <isActive>false</isActive>
                    <label>Damaged at counter</label>
                </value>
                <value>
                    <fullName>Damaged at engraving services</fullName>
                    <isActive>false</isActive>
                    <label>Damaged at engraving services</label>
                </value>
                <value>
                    <fullName>Damaged cello</fullName>
                </value>
                <value>
                    <fullName>Damaged Compact powder</fullName>
                </value>
                <value>
                    <fullName>Damaged decor (aesthetic) / Color not compliant-pack</fullName>
                    <isActive>false</isActive>
                    <label>Damaged decor (aesthetic) / Color not compliant-pack</label>
                </value>
                <value>
                    <fullName>Damaged decor (aesthetic) / Damaged  engraving</fullName>
                    <isActive>false</isActive>
                    <label>Damaged decor (aesthetic) / Damaged  engraving</label>
                </value>
                <value>
                    <fullName>Damaged decor (aesthetic) / Label does not hold</fullName>
                    <isActive>false</isActive>
                    <label>Damaged decor (aesthetic) / Label does not hold</label>
                </value>
                <value>
                    <fullName>Damaged folding box</fullName>
                </value>
                <value>
                    <fullName>Damaged Folding box&apos;s decor</fullName>
                </value>
                <value>
                    <fullName>Damaged folding box cello</fullName>
                    <isActive>false</isActive>
                    <label>Damaged folding box cello</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country selected in the web-to-case form</description>
        <label>Web Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEBUGPB__c</fullName>
        <label>DEBUGPB- NOT DEPLOU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FCR_bis__c</fullName>
        <formula>AND(
(InboundCall__c + IncomingEmail__c +  IncomingWebform__c +  IncomingLetter__c + NbAlcmeonConversation__c + NbConversation__c) = 1,
ISPICKVAL(Status, &quot;Closed&quot;) ,
ISPICKVAL( Case_resolution__c , &quot;Case resolved&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCR_bis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filling__c</fullName>
        <label>Product Filling 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Spam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark emails from backlisted addresses as spams. Used in associated flow</description>
        <label>Is Spam?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldSFID__c</fullName>
        <externalId>true</externalId>
        <label>OldSFID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product search</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
            <filterItems>
                <field>Product2.Commercial_Use_Text__c</field>
                <operation>equals</operation>
                <value>Catalog Sales</value>
            </filterItems>
            <filterItems>
                <field>Product2.Commercial_Use_Text__c</field>
                <operation>equals</operation>
                <value>Promo Sales Single Item</value>
            </filterItems>
            <filterItems>
                <field>Product2.Commercial_Use_Text__c</field>
                <operation>equals</operation>
                <value>Sales bas. value set</value>
            </filterItems>
            <filterItems>
                <field>Product2.Commercial_Use_Text__c</field>
                <operation>equals</operation>
                <value>POS Samples</value>
            </filterItems>
            <filterItems>
                <field>Product2.Commercial_Use_Text__c</field>
                <operation>equals</operation>
                <value/>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Urgence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Naturality sensoriality</fullName>
                </value>
                <value>
                    <fullName>FDT Return Service</fullName>
                </value>
                <value>
                    <fullName>ABCDior - Pampilles</fullName>
                </value>
                <value>
                    <fullName>Forever Cushion Powder Puff</fullName>
                </value>
                <value>
                    <fullName>Tik tok ingredient buzz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Réclamation justifiée</fullName>
                    <label>Justified claim</label>
                </value>
                <value>
                    <fullName>Réclamation abusive</fullName>
                    <label>Abusive claim</label>
                </value>
                <value>
                    <fullName>Réclamation non justifiée</fullName>
                    <label>Unjustified claim</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language selected in the web-to-case form</description>
        <label>Web Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Flag__c</fullName>
        <formula>IF(
RecordType.Name = &apos;GDPR&apos; &amp;&amp; CreatedDate  + 15 &lt; Now()
,
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000000Mfk8&amp;operationContext=CHATTER&amp;contentId=05T090000053S1C&quot;, &quot;Red Flag&quot;, 20, 20)
,
IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=06809000000MfnT&amp;operationContext=CHATTER&amp;contentId=05T090000053SGC&quot;, &quot;Green Tick&quot;, 20, 20)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filling_1__c</fullName>
        <label>Product Filling 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OTC_Alert__c</fullName>
        <formula>IF( Product__r.OTC__c = True, True, False)</formula>
        <label>OTC alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QualitASM__c</fullName>
        <label>QualitASM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Type_2__c</fullName>
        <label>WF_Type_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>toCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>toCorrect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axis_Label__c</fullName>
        <label>Axis Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <label>Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Not compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Batch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>